# kernelMFG-RFU

./: .gitignore  LICENSE  README.md  mybib.bib  pyproject.toml  requirements.txt  sbp_h02.tex
experiments/: exp_5_1_1_bias.py  exp_5_1_2_variance.py  exp_5_1_3_interaction_estimator.py  exp_5_1_4_vstat_bimodal.py  exp_5_1_4_vstat_penalty.py  exp_5_2_bimodal.py  exp_5_3_gauss_shift.py  exp_5_4_1_lambda_sweep.py  exp_5_4_2_kernel_limit.py  exp_5_5_compute_scaling.py  exp_5_6_ev_charging.py
kernel_sot/: __init__.py  estimators.py  networks.py  sde.py  utils.py
